<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:id="@+id/create_layout_scroll"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/MainTheme"
    android:background="@color/cardBackgroundColor"
    tools:context="com.productions.crackdown.bookingapp.Views.CreateViewFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/create_text_title"
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_an_nappointment"
            android:textSize="30sp" />

        <View
            android:id="@+id/create_dividider"
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/create_text_title"
            android:layout_marginBottom="@dimen/horizontal_splitter_margin"
            android:layout_marginTop="@dimen/horizontal_splitter_margin"
            android:background="#c0c0c0" />

        <EditText
            android:id="@+id/create_edit_title"
            style="@style/inputbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_dividider"
            android:background="@drawable/background_edittext"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_today_white_24dp"
            android:drawableTint="@color/colorAccent"
            android:fontFamily="@font/nunito"
            android:hint="@string/create_title" />

        <RelativeLayout
            android:id="@+id/create_edit_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_edit_title"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="top">

            <EditText
                android:id="@+id/create_edit_details"
                style="@style/inputbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/create_btn_find"
                android:background="@drawable/background_edittext"
                android:layout_marginEnd="15dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_description_white_24dp"
                android:drawableTint="@color/colorAccent"
                android:fontFamily="@font/nunito"
                android:hint="@string/create_description" />

            <Button
                android:id="@+id/create_btn_find"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_create_white_24dp"
                android:text="FIND"
                style="@style/ButtonPurpleRound"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/create_edit_date"
            style="@style/inputbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_edit_details_layout"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_edittext"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_date_range_white_24dp"
            android:drawableTint="@color/colorAccent"
            android:fontFamily="@font/nunito"
            android:gravity="top"
            android:hint="@string/create_date" />

        <Button
            android:id="@+id/create_btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_edit_date"
            android:layout_gravity="center"
            android:text="@string/create_create"
            style="@style/ButtonPurple" />

        <LinearLayout
            android:id="@+id/create_layout_the"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/create_btn_create">

            <EditText
                android:id="@+id/create_edit_thesaurus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@drawable/background_edittext"
                android:hint="@string/word"
                android:padding="20dp"
                android:textAlignment="center" />


            <ProgressBar
                android:id="@+id/create_pb_the"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <Button
                android:id="@+id/create_btn_thesaurus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/create_thesarus"
                style="@style/ButtonPurple" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/create_recycler_synonyms"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/create_layout_the"
            android:layout_marginTop="20dp">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/create_text_no_syno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@id/create_layout_the"
            android:layout_marginTop="20dp"
            android:text="No Synonyms Found."
            style="@style/text_title"/>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
